istio-demo/deployment1.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v1
  namespace:  dev 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
      version: v1
  template:
    metadata:
      labels:
        app: my-app
        version: v1
    spec:
      containers:
      - name: web
        image: quay.io/ubiowororuki/demo-app:latest
        ports:
        - containerPort: 80
