istio-demo/deployment2.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
      version: v2
  template:
    metadata:
      labels:
        app: my-app
        version: v2
    spec:
      containers:
      - name: web
        image: rukevweubio/myclone-netflix-app:latest
        ports:
        - containerPort: 80
