istio-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-svc
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: my-app
