istio-demo/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app-vservice
  namespace: dev
spec:
  hosts:
  - my-app-svc
  http:
  - route:
    - destination:
        host: my-app-svc
        subset: v1
      weight: 10
    - destination:
        host: my-app-svc
        subset: v2
      weight: 90
